# TemperatureToConductance

./: CMakeLists.txt  FileSystemAccess.cpp  FileSystemAccess.hpp  ImageConverter.cpp  ImageConverter.hpp  ImageConverter2.cpp  ImageConverter2.hpp  main.cpp
